<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    android:layout_alignParentBottom="true"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:background="#ffdfeaf1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="10pt"
            android:textStyle="bold" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/spottify_button"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="8dp"
            android:text="@string/spotify_label"
            android:background="#F08C35"
            android:onClick="spotifyApp" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/scores_label"
            android:id="@+id/scores_button"
            android:layout_below="@+id/spottify_button"
            android:layout_alignStart="@+id/spottify_button"
            android:layout_marginBottom="8dp"
            android:background="#F08C35"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/spottify_button"
            android:onClick="scoresApp" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/library_label"
            android:id="@+id/library_button"
            android:layout_below="@+id/scores_button"
            android:layout_alignLeft="@+id/scores_button"
            android:layout_alignStart="@+id/scores_button"
            android:layout_marginBottom="8dp"
            android:background="#F08C35"
            android:onClick="libraryApp" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/build_label"
            android:id="@+id/build_button"
            android:layout_below="@+id/library_button"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/library_button"
            android:layout_alignStart="@+id/library_button"
            android:layout_marginBottom="8dp"
            android:background="#F08C35"
            android:onClick="buildApp" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/reader_label"
            android:id="@+id/reader_button"
            android:layout_below="@+id/build_button"
            android:layout_alignLeft="@+id/build_button"
            android:layout_alignStart="@+id/build_button"
            android:layout_marginBottom="8dp"
            android:background="#F08C35"
            android:onClick="readerApp" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/capstone_label"
            android:id="@+id/capstone_button"
            android:layout_below="@+id/reader_button"
            android:layout_alignLeft="@+id/reader_button"
            android:layout_alignStart="@+id/reader_button"
            android:background="#F44336"
            android:onClick="capstoneApp" />

</RelativeLayout>

</ScrollView>
